# cryptalgocpp

./: .gitmodules  CMakeLists.txt  Dockerfile.remote-cpp-env  build.sh  config.json  main.cpp
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  Config.cpp  Config.h  DampedMeanReversionStatistic.cpp  DampedMeanReversionStatistic.h  Event.cpp  Event.h  Factory.h  KuCoinMarketData.cpp  KuCoinMarketData.h  MDQueue.h  MarketData.cpp  MarketData.h  MarketDataInterface.cpp  MarketDataInterface.h  OrderInterface.cpp  OrderInterface.h  OrderManager.h  SmaStatistic.cpp  SmaStatistic.h  StatisticsChain.cpp  StatisticsChain.h  StatisticsInterface.h  Utils.h
src/model/: Allocation.h  Allocations.cpp  Allocations.h  CMakeLists.txt  KLines.cpp  KLines.h  MarketDataObject.h  Price.h  Quote.cpp  Quote.h  Symbol.h  Trade.cpp  Trade.h
src/statistics/: SmaStatistic.h  StatisticsInterface.h
src/strategy/: CMakeLists.txt  SimpleStrategy.h  Strategies.cpp  Strategy.h
test/: CMakeLists.txt  TestKLines.cpp  TestPrice.cpp  TestStrategy.cpp  TestSymbol.cpp  test_main.cpp
test/framework/: InputParser.cpp  InputParser.h  TestEnv.cpp  TestEnv.h  TestMarketDataInterface.cpp  TestMarketDataInterface.h
